# sysprox

./: .gitignore  Cargo.toml  INSTALL_GUIDE.md  LICENSE  Makefile  README.md  build.rs
src/: app.rs  app_tests.rs  config.rs  config_tests.rs  error.rs  events.rs  lib.rs  main.rs  update_checker.rs  version.rs
src/systemd/: client.rs  control.rs  journal.rs  metrics.rs  mod.rs  models.rs  resilience.rs  tests.rs
src/ui/: dashboard.rs  detail.rs  help.rs  logs.rs  mod.rs  new_service.rs  password.rs  styles.rs  tests.rs
